fix camera
